css/cms_right.css
/* ... */
.right form span.readonly {
	border: 1px #CCC dotted;
	background-color: #F7F7F7;
	display: block;
	width: 98%;
	padding: 3px;
	margin:5px 0;
}

.right form .validation,
.right form .error,
.right form .required
{
	border: 1px solid #f00;
	background: #fcc;
	padding: 0.5em;
	width: 50%;
}

.right form .TableField .message {
	width: auto;
}

.right form .creditCardfield input {
	width: 4.415em;
}

.right form  input.checkbox, .right form .optionset input, .right form .htmleditor select, .right form input.action {
	width: auto;
}
.right form ul.optionset {
	padding: 0;
}
.right form .optionset li {
	list-style: none;
}

.right form h2 {
	clear: both;
}

.right form .fieldgroup input, .right form .fieldgroup select {
	width: auto;
}



/**
 * TableField (and subclasses)
 */
table.TableField, 
table.TableListField, 
.TableListField table.data, 
table.CMSList {
	border-collapse: collapse;
	border-spacing: 0;
	border : 1px solid #aaaaaa;
	width : 100%;
}

/* HACK Preventing IE6 from showing double borders */
body>div table.TableField, 
body>div table.TableListField, 
body>div .TableListField table.data, 
body>div table.CMSList {
	border-collapse: separate;
}

table.TableField td, 
table.TableListField td, 
.TableListField table.data td, 
table.CMSList td {
	border-style:none;
}

table.TableField th, 
table.TableListField th, 
.TableListField table.data th, 
table.CMSList th {
	whitespace: no-wrap;
}

table.TableField thead th, 
.TableListField table.data thead th, 
table.CMSList thead th {
	background-image : url(../../cms/images/tables/thead.png);
	background-repeat : repeat-x;
	background-position : left bottom;
	background-color : #ebeadb;
	height : 24px;
	border-right : 1px solid #aca899;
	border-left : 1px solid #ffffff;
	padding-left : 5px;
}

table.TableField thead th span, 
.TableListField table.data thead th span {
	display: block;
	float: left;
}

table.TableField thead th a, 
.TableListField table.data thead th a, 
table.CMSList thead th a {
	color: #000;
}

table.TableField thead th span.sortLink, 
.TableListField table.data thead th span.sortLink, 
table.CMSList thead th span.sortLink {
	width: 16px;
	height: 16px;
	overflow: hidden;
}

table.TableField tfoot tr.summary td, 
.TableListField table.data tfoot tr.summary td, 
table.CMSList tfoot tr.summary td {
	background-color : #ebeadb;
}

table.TableField tbody td, 
table.TableField tfoot td, 
.TableListField table.data tbody td, 
.TableListField table.data tfoot td, 
table.CMSList tbody td,
table.CMSList tfoot td {
	border : 1px solid #f1efe2;
	padding-left : 5px;
}

.TableField td input,
.TableListField td input {
	width: 98%;
}

table.data tbody td input {
	border:0 !important;
}

table.TableField tbody td.checkbox, 
.TableListField table.data tbody td.checkbox, 
table.CMSList tbody td.checkbox {
	border : 1px solid #f1efe2;
	padding-left : 5px;
	background-image : url(../../cms/images/tables/checkbox.png);
	background-repeat : repeat-x;
	background-position : left bottom;
}

table.TableField tbody tr.over td, 
.TableListField table.data tbody tr.over td, 
table.CMSList tbody td.over td{
	background-color: #FFC;
}

table.TableField tbody tr.current td, 
.TableListField table.data tbody tr.current td, 
table.CMSList tbody td.current td {
	background-color: #316ac5;
	color : white;
}

.TableListField table.data tfoot .addlink img {
	vertical-align: middle;
	margin: 3px 6px 3px 3px;
}

.right form .TableField span.readonly {
	border: 0;
	background: none;
	padding: 0;
	margin-bottom: 0;
}

.TableListField div.utility {
	margin-top: 0.5em;
}

.TableListField div.utility a {
	font-size: 9px;
	border: 1px solid #aaa;
	padding: 2px;
}

/**
 * Selection Groups
 */
.SelectionGroup {
	padding: 0px;
	clear : both;
}
.SelectionGroup li {
	list-style-type: none;
	float : left;
	clear : both;
}
.SelectionGroup li input {
	width: 20px;
	float : left;

}

.SelectionGroup li div.field {
	display: none;
	font-size: 1em;
}
.SelectionGroup li input, .right .SelectionGroup li label {
	display: block;
}	
.SelectionGroup li.selected div.field {
	margin-left: 30px;
	display: block;
	margin-bottom: 1em;
}	

.SelectionGroup li.selected label.selector {
	font-weight: bold;
}

/**
 * Composite Fields - raw concatenation of fields for programmatic purposes.
 */


.right form div.field.CompositeField {
	margin-left: 7.5em;
}
.right form div.field.CompositeField div.field {
	font-size: 1em;
}

.right form div.field.CompositeField {
	clear: both;
}	
.right form div.field.CompositeField label.left {
	float: left;
	width: 10em;
	margin-left: -10em;
}

.right form div.column2 {
	float: left;
	width: 45%;
	margin-right: 4%;
}

.right form div.multicolumn {
	width: 100%;
	float: left;
	clear: left;
}

/** 
 * Checkbox set fields
 */
#right form .CheckboxSetField ul{
	margin:0;
	padding:0;
}
#right form .CheckboxSetField ul li{
	list-style:none !important;
	margin:0;
	padding:0;
}
#right form .CheckboxSetField input{
	width:auto;
}



.ajaxActions {
	position: absolute;
	top: 0;
	right: 0;
	padding: 0;
	margin: 0;
	text-align: right;
	background-image:url(../images/textures/ToolBar.png);
	height : 21px;
	border-left : 1px solid #808080;
	border-bottom : 1px solid #808080;
}
.ajaxActions input {
	padding: 0;
	border-style: none;
	background-color:transparent;
	cursor: pointer;
	float : left;
	height : 22px;
	background-image:url(../images/textures/seperator.png);
	background-repeat:no-repeat;
	background-position:right;
	padding-left: 10px;
	padding-right : 10px;
	margin : 0px;
	color : #333333;
}

.right form div.tab {
	clear: left;
	overflow: auto;
	border: 1px #AAA solid;
	border-top: none;
	position: relative;
	top: -3px;
	margin: 0;
	padding: 10px;
	/*width: 98%;*/
}
.right form div.tabset {
	border: 1px solid #fff; /* Hack for FF1.5/Win Float-Bug */
	clear: left;
	margin: 0;
	/*width: 100%;*/
}

/**
 * Bottom-right
 */

#rightbottom {


border : none;
margin-top : 4px;
margin-left : 1px;
border : 1px solid #808080;

}
/* ... */

